--- a/backend/package.json
+++ b/backend/package.json
@@ -3,27 +3,33 @@
   "version": "1.0.0",
   "description": "Expense anomaly detection system",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "@huggingface/transformers": "^3.0.2",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.73.1",
     "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.15",
+    "tesseract.js": "^5.1.1",
     "torch": "^0.2.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "nodemon": "^3.1.7"
   }
 }
