--- a/frontend/FE/package.json
+++ b/frontend/FE/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@tremor/react": "^3.18.4",
+    "axios": "^1.7.8",
+    "firebase": "^11.0.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "openai": "^4.73.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/axios": "^0.9.36",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
