--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
+    "recharts": "^2.14.1",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
