--- a/frontend/FE/package.json
+++ b/frontend/FE/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@tremor/react": "^3.18.4",
     "axios": "^1.7.8",
+    "chart.js": "^4.4.7",
     "firebase": "^11.0.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "openai": "^4.73.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6"
